tests/integration_tests/snapshots/integration_tests__interface_tests__get_account_interface_compressed_only-account-interface.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 107
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": null
}
