tests/integration_tests/snapshots/integration_tests__interface_tests__get_ata_interface-ata-interface.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 279
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": null
}
