tests/integration_tests/snapshots/integration_tests__interface_tests__get_mint_interface-mint-interface.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 271
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "key": "JAisegaP3mQQEqsX7H4qiKoBrPYvr36FW1rpeCKHixUU",
    "account": {
      "lamports": 0,
      "data": "AQAAADwnoQx7ujHJcfKDkl7hQKUz/Hvi6qrsfBpPmC20LrGTAAAAAAAAAAAJAQEAAAA8J6EMe7oxyXHyg5Je4UClM/x74uqq7HwaT5gttC6xkwMA/xRAVGPTUAuc3hxY3AOcETGkJ2jgoc14EK83nFeVOd1SXdgASB2I4Btm1QB5tapW556WUNTAhOgajeMPwNjdVfwAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAPgqAQKAMAA=",
      "owner": "cTokenmWW8bLPjZEBAUgYy3zKxQZW6VKi7bqNFEVv3m",
      "executable": false,
      "rentEpoch": 0,
      "space": 263
    },
    "cold": {
      "type": "mint",
      "hash": "wSoCZnxk3W2rsh7GyonDtjRa7ZwXgsGQBYkc4xHg8W5",
      "leafIndex": 4,
      "treeInfo": {
        "tree": "bmt5yU97jC88YXTuSukYHa8Z5Bi2ZDUtmzfkDTA2mG2",
        "queue": "oq5oh5ZR3yGomuQgFduNDzjtGvVWfDRGLuDVjv9a96P",
        "treeType": "stateV2",
        "seq": null
      },
      "data": {
        "discriminator": [
          1,
          0,
          0,
          0,
          60,
          39,
          161,
          12
        ],
        "data": "e7oxyXHyg5Je4UClM/x74uqq7HwaT5gttC6xkwAAAAAAAAAACQEBAAAAPCehDHu6Mclx8oOSXuFApTP8e+Lqqux8Gk+YLbQusZMDAP8UQFRj01ALnN4cWNwDnBExpCdo4KHNeBCvN5xXlTndUl3YAEgdiOAbZtUAebWqVueellDUwIToGo3jD8DY3VX8AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAD4KgECgDAA"
      }
    },
    "mintData": {
      "mintPda": "JAisegaP3mQQEqsX7H4qiKoBrPYvr36FW1rpeCKHixUU",
      "mintSigner": "6YXRmnz78bHvQiHyLFm5tvSPPL2KfzNorNTWHqsnTFYx",
      "mintAuthority": "53pWamsRsaNDnjFJho4WdTPF8StjG3986mVARrXrfUyQ",
      "freezeAuthority": "53pWamsRsaNDnjFJho4WdTPF8StjG3986mVARrXrfUyQ",
      "supply": 0,
      "decimals": 9,
      "version": 3,
      "mintDecompressed": false,
      "extensions": null
    }
  }
}
