tests/integration_tests/snapshots/integration_tests__interface_tests__get_mint_interface_nonexistent-mint-interface-none.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 378
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": null
}
