tests/integration_tests/snapshots/integration_tests__interface_tests__get_multiple_account_interfaces-multiple-account-interfaces.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 230
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": [
    null,
    null,
    null
  ]
}
