tests/integration_tests/snapshots/integration_tests__interface_tests__get_token_account_interface_by_owner-token-account-interface.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 161
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": null
}
