tests/integration_tests/snapshots/integration_tests__interface_tests__get_token_account_interface_compressed_only-token-account-interface.snap
---
source: tests/integration_tests/interface_tests.rs
assertion_line: 157
expression: result
---
{
  "context": {
    "slot": 0
  },
  "value": null
}
